kubernetes/statefulset.yaml
# statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulset
  namespace: kiii
spec:
  serviceName: db
  replicas: 1
  selector:
    matchLabels:
      app: studentsapp
  template:
    metadata:
      labels:
        app: studentsapp
    spec:
      containers:
      - name: kiii-project
        image: katerinapoposka/sample-demo-project:latest
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: local-path
      resources:
        requests:
          storage: 1Gi
