kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: kiii
spec:
  selector:
    app: studentsapp
  ports:
    - protocol: TCP
      port: 5432  # PostgreSQL default port
      targetPort: 5432  # The port on which your PostgreSQL service is running
