kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: kiii
spec:
  selector:
    app: studentsapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
